--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,8 @@ find_package(OpenMP REQUIRED)
 # 全局设置
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
 
-# 2. 扫描源文件
+# 2. 扫描公共源文件 (src/*.cpp)
+# 注意：这里不包含 main 函数，只包含算法实现的源文件
 file(GLOB_RECURSE SRC_FILES src/*.cpp)
 
 # 3. Gurobi 路径配置 (Windows)
@@ -21,14 +22,13 @@ if(WIN32)
     set(GUROBI_LIB_NAME "gurobi120") 
     set(GUROBI_CPP_LIB_NAME "gurobi_c++md2017") 
 else()
-    # Linux/Mac 配置 (保留以防万一)
+    # Linux/Mac 配置
     set(GUROBI_PATH_ROOT "/opt/gurobi1200/linux64")
     set(GUROBI_LIB_NAME "gurobi120")
     set(GUROBI_CPP_LIB_NAME "gurobi_c++")
 endif()
 
-# 4. 自动查找库文件 (这是修复的关键)
-# CMake 会自动找到这些 .lib 文件的绝对路径，而不是传递错误的 -l 参数
+# 4. 自动查找库文件
 find_library(GUROBI_LIB 
     NAMES ${GUROBI_LIB_NAME}
     PATHS ${GUROBI_PATH_ROOT}/lib 
@@ -42,19 +42,34 @@ find_library(GUROBI_CPP_LIB
 )
 
 if (NOT GUROBI_LIB OR NOT GUROBI_CPP_LIB)
-    message(FATAL_ERROR "无法在 ${GUROBI_PATH_ROOT}/lib 找到 Gurobi 库文件！请检查路径是否正确，或者文件名是否匹配。")
+    message(FATAL_ERROR "无法在 ${GUROBI_PATH_ROOT}/lib 找到 Gurobi 库文件！请检查路径是否正确。")
 endif()
 
 message(STATUS "Found Gurobi Lib: ${GUROBI_LIB}")
 message(STATUS "Found Gurobi C++ Lib: ${GUROBI_CPP_LIB}")
 
-# 5. 生成可执行文件
-add_executable(LPSolver Liner_Programmer/main.cpp ${SRC_FILES})
+# 5. 循环生成 10 个可执行文件
+# 假设你的文件名为 main1.cpp, main2.cpp, ..., main10.cpp
+# 生成的可执行文件名为 LPSolver1, LPSolver2, ..., LPSolver10
 
-# 包含头文件
-target_include_directories(LPSolver PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
-target_include_directories(LPSolver PUBLIC ${GUROBI_PATH_ROOT}/include)
+foreach(i RANGE 0 10)
+    set(TARGET_NAME "LPSolver${i}")
+    set(SOURCE_FILE "Liner_Programmer/main${i}.cpp")
 
-# 6. 链接库
-# 直接传递找到的 .lib 文件路径
-target_link_libraries(LPSolver ${GUROBI_CPP_LIB} ${GUROBI_LIB} OpenMP::OpenMP_CXX)
+    # 检查文件是否存在，防止报错
+    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE_FILE}")
+        message(STATUS "Configuring executable: ${TARGET_NAME} with source ${SOURCE_FILE}")
+        
+        # 添加可执行文件：主函数 + 公共源文件
+        add_executable(${TARGET_NAME} ${SOURCE_FILE} ${SRC_FILES})
+
+        # 包含头文件
+        target_include_directories(${TARGET_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+        target_include_directories(${TARGET_NAME} PUBLIC ${GUROBI_PATH_ROOT}/include)
+
+        # 链接库
+        target_link_libraries(${TARGET_NAME} ${GUROBI_CPP_LIB} ${GUROBI_LIB} OpenMP::OpenMP_CXX)
+    else()
+        message(WARNING "Source file ${SOURCE_FILE} not found! Skipping ${TARGET_NAME}.")
+    endif()
+endforeach()
